<resources>
    <string name="app_name">SICOR</string>
    <string name="Login_Email">E-mail</string>
    <string name="password_login">Password</string>
    <string name="btn_login">Log in</string>
    <string name="action_search">Search</string>
    <string name="action_setting">Account settings</string>
    <string name="action_logout">Logout</string>
    <string name="btn_register_2">Sign in</string>
    <string name="btn_register">Create account</string>
    <string name="reg_confirm_password">Confirm password</string>
    <string name="text_of_btn_setup">Save</string>
    <string name="post_hint">Add a title</string>
    <string name="TextView_post">Risk level:</string>
    <string name="chip_low">Low</string>
    <string name="chip_Medium">Medium</string>
    <string name="chip_high">High</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_myposts_text">My Posts</string>
    <string name="bottom_ac_text">Settings</string>
    <string name="btn_homce_text">Home</string>
    <string name="btn_bottom_navigation">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_for_sicor">Sign Up for Sicor</string>
    <string name="are_you_new_here_create_an_account">Are you new here? Create an account!</string>
    <string name="enter_a_description">Enter a description</string>
    <string name="post_date">Post date</string>
    <string name="username">Username</string>
    <string name="lorem">Lorem ipsum dolor sit amet regione urbanitas vis qui elit populo ut</string>
    <string name="enter_a_name">Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="Settings_bro">Settings</string>
</resources>
